--- a/config/cable.yml
+++ b/config/cable.yml
@@ -5,6 +5,7 @@ test:
   adapter: async
 
 production:
-  adapter: redis
-  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
-  channel_prefix: chatyade_production
+  #adapter: redis
+  #url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
+  #channel_prefix: chatyade_production
+  adapter: async
