request originに当該url指定

--- a/config/database.yml
+++ b/config/database.yml
@@ -24,5 +24,6 @@ production:
   <<: *default
   #database: db/production.sqlite3
   adapter: postgresql
-  encoding: unicode
+  database: db/production.pg
   pool: 5
+
